# sec-alert-selfhosted

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  DISCLAIMER.md  Dockerfile  Makefile  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  config.py  db.py  logging.py  main.py  models.py  release.py  security.py
app/cli/: __init__.py  release.py
app/services/: alerts.py  broker.py  ingest.py  locks.py  scheduler.py  worker.py
app/services/notify/: base.py  slack.py  smtp.py  webhook.py
app/services/scoring/: eight_k.py  form4.py
app/services/sec/: __init__.py  client.py  eight_k.py  form4.py  indexes.py  latest_ownership.py  resolver.py  (+1 more)
app/web/: __init__.py  helpers.py  routes_actions.py  routes_dashboard.py  routes_destinations.py  routes_filings.py  routes_settings.py  routes_watchlist.py
docs/: BACKUP_RESTORE.md  BUYER_QUICKSTART.md  CAPACITY_BENCHMARK_PLAN.md  GITHUB_METADATA.md  INSTALL_DOCKER.md  PAID_RELEASE_GAP_ANALYSIS.md  POSTGRESQL_FUTURE_WORK.md  SCREENSHOT_CAPTURE.md  STATUS_REPORT.md  TROUBLESHOOTING.md  UPGRADE.md
migrations/: env.py
migrations/versions/: 20260326_01_phase6_openai_rewrite.py
tests/: conftest.py  test_broker.py  test_config.py  test_health.py  test_investor_ux.py  test_locks.py  test_phase2_eight_k.py  test_phase3_form4.py  test_phase4_recovery.py  test_phase5_delivery.py  test_phase6_openai_rewrite.py  test_release_tools.py  test_watchlist.py
(+39 files in other folders)
