[project]
name = "sec-alert-selfhosted"
version = "0.1.0"
description = "Self-hosted SEC alert application with localhost-first defaults."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "portalocker>=3.1.1",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
